Bug 157543 - FILEOPEN PPT: object specific glue points are missing for import from binary ppt
Summary: FILEOPEN PPT: object specific glue points are missing for import from binary ppt
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Shape-Points
  Show dependency treegraph
 
Reported: 2023-10-01 08:19 UTC by Regina Henschel
Modified: 2024-02-20 01:06 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
5PointStar as connector target (9.00 KB, application/vnd.ms-powerpoint)
2023-10-01 08:19 UTC, Regina Henschel
Details
Screenshots compared (29.97 KB, image/png)
2023-10-01 08:20 UTC, Regina Henschel
Details
MS-Office binaryFormatSpecification (1.68 MB, application/pdf)
2023-10-01 08:26 UTC, Regina Henschel
Details
screenshot (100.28 KB, image/png)
2023-10-02 18:43 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2023-10-01 08:19:59 UTC
Created attachment 189926 [details]
5PointStar as connector target

Open attached file in LibreOffice and in PowerPoint and compare. Notice, that the target points of the connector lines are wrong. The 5-point-star has originally only glue points in the tips of the star.

The problem exists with some other shapes too.

The wrong leaving direction and the different routing is another problem that is not tracked here.
Comment 1 Regina Henschel 2023-10-01 08:20:40 UTC
Created attachment 189927 [details]
Screenshots compared
Comment 2 Regina Henschel 2023-10-01 08:26:37 UTC
Created attachment 189928 [details]
MS-Office binaryFormatSpecification

This older version of the "Microsoft Office Drawing 97-2007 Binary Format Specification" contains the needed information. This information is not contained in newer versions currently available from Microsoft.

The specification for the 5-point-star is on page 109.
Comment 3 Commit Notification 2023-10-02 14:24:02 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dd7fc07f83416a3d8a444947b7d28f7347520d6a

tdf#157543 Add glue points to binary 5-point star

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Regina Henschel 2023-10-02 16:22:49 UTC
This is fixed for 5-point star.

The import from pptx is still wrong, but that is tracked in bug 157516.

When other shape types are handled, we can write a new report or reopen this one.
Comment 5 BogdanB 2023-10-02 18:43:17 UTC
Created attachment 189961 [details]
screenshot

The line shape it's different from PowerPoint 97, but it's much better.
Comment 6 BogdanB 2023-10-02 18:43:36 UTC
Verified with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d97b5849f3cfcecbdd929dca7bd7ac2c4fa31f8b
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded