tdf#157543 Add glue points to binary 5-point star

The patch adds the glue points defined in 'Microsoft Office Drawing
97-2007 Binary Format Specification' to our corresponding preset
'msoStar'.

This star shape is contained on page 1 in odp/shapes-test.odp. It had
previously no glue points, but now it has five glue points. Thus I have
updated the xml dump.

Import from pptx is still broken, tracked in tdf#157216.

Change-Id: Ifc9f28118fe23a3d37af0357b72bb23eeef6b894
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157446
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>